classDiagram
direction LR

class Protein {
  invariant atoms and residues
  owns ProteinTopology
  owns permanent conformations
}

class LegacyAmberTopology {
  owns CovalentTopology
  owns RingTopology
  owns AtomSemanticTable
}

class ProteinConformation {
  owns positions
  owns ConformationAtom rows
  owns ConformationResult map
}

class ConformationAtom {
  position
  typed calculator fields
  tensors and kernels
}

class ConformationResult {
  Name()
  Dependencies()
  WriteFeatures()
}

class TrajectoryProtein {
  wraps Protein
  owns TrajectoryAtom rows
  owns TrajectoryResult list
  owns adopted dense buffers
}

class TrajectoryAtom {
  Welford states
  atom events
}

class TrajectoryResult {
  Compute()
  Finalize()
  WriteH5Group()
}

class DenseBuffer {
  atom-major storage
  typed payload
}

Protein "1" *-- "1" LegacyAmberTopology : via ProteinTopology
Protein "1" *-- "0..*" ProteinConformation : permanent only
ProteinConformation "1" --> "1" Protein : raw const back-pointer
ProteinConformation "1" *-- "N" ConformationAtom : parallel rows
ProteinConformation "1" *-- "0..*" ConformationResult : type-index singleton map
TrajectoryProtein "1" *-- "1" Protein : wrapped protein
TrajectoryProtein "1" *-- "N" TrajectoryAtom : one per atom
TrajectoryProtein "1" *-- "0..*" TrajectoryResult : attach order
TrajectoryProtein "1" *-- "0..*" DenseBuffer : adopted at Finalize
TrajectoryResult ..> ProteinConformation : reads current frame
TrajectoryResult ..> TrajectoryAtom : accumulates history
